web/css/wfcss.css
html{ 
    overflow-y: scroll; 
}

body {
    background: #3b5998;
}

.form_bg {
    background-color:#eee;
    color:#666;
    padding:20px;
    border-radius:10px;
    position: absolute;
    border:1px solid #fff;
    margin: auto;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 320px;
    height: 290px;
}

.form_bg2 {
    background-color:#eee;
    color:#666;
    padding:20px;
    border-radius:10px;
    position: static;
    border:1px solid #fff;
    margin: auto;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 320px;
    height: 750px;
}

.align-center {
    text-align:center;
}

.clearer {
 height:0;
 clear:both;
}

